# docx-to-markdown

./: README.md  pyproject.toml  requirements.txt
docx_to_markdown/: cli.py  converter.py  utils.py
tests/: test_converter.py  test_utils.py
